@@ -11,6 +11,7 @@ changes relative to sbcl-1.3.1
   * bug fix: READ-FROM-STRING compiler-macro does not permute its arguments
   * bug fix: DEFUN of a function name that collides with a system-generated
     structure accessor does not confuse the runtime. (lp#540063)
+  * bug fix: heap corruption from miscompiled RESTART-BIND. (lp#1530390)
 
 changes in sbcl-1.3.1 relative to sbcl-1.3.0:
   * enhancement: SB-THREAD support for ARM64.
